[package]
name = "rustywater"
version = "0.1.0"
authors = ["vscode"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpio = "0.4.1"
jsonwebtoken = "8"
reqwest = { version = "0.11.14", features = ["blocking"] }
sled = "0.34.7"

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]
